--- a/mogo/css/media/note-media.css
+++ b/mogo/css/media/note-media.css
@@ -1,34 +1,34 @@
 @media (max-width: 1100px) {
   .note-carousel {
-    margin-top: 0;
+    height: 300px;
+    margin-top: 50px;
   }
+  /* content direction */
   .note-carousel-content {
-    /* border: 2px solid red; */
-    height: 120px;
-    /* width: 200px; */
+    height: 100%;
     flex-direction: column;
     padding: 0;
-    margin-bottom: 30px;
   }
 
   .note-small-nav {
     margin-bottom: 10px;
   }
 
+  /* hide default buttons */
   #note-carousel-left-btn,
   #note-carousel-right-btn {
     display: none;
   }
+
+  /* show mobile buttons */
   #note-carousel-left-btn2,
   #note-carousel-right-btn2 {
     display: block;
   }
 
   .note-text-container {
-    /* border: 1px solid tomato; */
-    /* width: 200px; */
-    width: 400px;
-    height: 200px;
+    max-width: 395px;
+    height: 130px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -36,11 +36,10 @@
 
   .note-paragraph-container {
     height: 120px;
-    /* border: 2px solid tomato; */
   }
+
   p.note-carousel-text,
   p.note-carousel-text.show-note {
-    /* font-size: 13px; */
     font-size: 16px;
     text-align: center;
     padding: 0 1em;
@@ -48,7 +47,6 @@
   .note-sub.note-author,
   .note-sub.note-author.show-note {
     font-size: 14px;
-    /* font-size: 18px; */
     padding: 0;
     margin-left: 10px;
   }
@@ -77,25 +75,15 @@
   p.note-carousel-text.show-note {
     font-size: 13px;
   }
-  .note-text-container {
-    width: 200px;
-  }
+
   .delimiter {
     width: 10px;
   }
   .note-text-container {
-    width: 260px;
-    height: 200px;
-  }
-  .note-paragraph-container {
     height: 120px;
   }
 }
 @media (max-width: 300px) {
-  .note-carousel-content {
-    height: 262px;
-  }
-
   .note-text-container {
     width: 220px;
   }
