--- a/mogo/css/media/what-media.css
+++ b/mogo/css/media/what-media.css
@@ -1,4 +1,5 @@
 @media (max-width: 1280px) {
+  /* accordion container direction */
   .what-carousel {
     flex-direction: column;
     align-items: center;
