--- a/mogo/css/slider.css
+++ b/mogo/css/slider.css
@@ -1,3 +1,7 @@
+/* ************************* */
+/* use styles from note.css  */
+/* ************************* */
+
 .slider {
   padding: 100px 0 130px 0;
   background-color: var(--primary-color);
