--- a/mogo/style.css
+++ b/mogo/style.css
@@ -1,5 +1,6 @@
 @import url('./css/variables.css');
 @import url('./css/typography.css');
+@import url('./css/styles-all.css');
 @import url('./css/header.css');
 @import url('./css/about.css');
 @import url('./css/work.css');
@@ -15,145 +16,3 @@
 @import url('./css/map.css');
 @import url('./css/footer.css');
 @import url('./css/media.css');
-
-.about {
-  padding-top: 91px;
-}
-.work,
-.unique-content,
-.happy-inner {
-  padding-top: 109px;
-}
-.examples {
-  padding-top: 110px;
-}
-.what,
-.blog-inner {
-  padding-top: 112px;
-}
-.team {
-  padding-top: 99px;
-}
-
-.header-inner-content,
-.about-image-container,
-.work-wrapper,
-.about-counter-inner,
-.what-carousel,
-.note-carousel-inner,
-.team-inner,
-.inner-brands,
-.happy-inner,
-.blog-inner,
-.footer-inner {
-  max-width: 1200px;
-}
-
-.heading-sub {
-  color: #333333;
-  font-weight: 400;
-  font-family: 'Kaushan Script', cursive;
-  font-size: 24px;
-  text-align: center;
-  padding: 0;
-  line-height: normal;
-  margin-bottom: 22px;
-}
-
-.heading-story {
-  font-family: Montserrat;
-  color: #333333;
-  font-size: 30px;
-  text-transform: uppercase;
-  position: relative;
-  text-align: center;
-  padding: 0;
-  font-weight: bold;
-  margin-bottom: 90px;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-}
-
-.heading-story::after {
-  content: '';
-  width: 60px;
-  height: 3px;
-  background-color: #f38181;
-  position: absolute;
-  bottom: -42px;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.mini-heading {
-  text-transform: uppercase;
-  font-family: Montserrat;
-  font-weight: normal;
-  text-align: center;
-  font-size: 14px;
-  color: #333;
-}
-
-.regular-text {
-  font-family: Roboto;
-  font-size: 15px;
-  font-weight: normal;
-  line-height: 1.6;
-  letter-spacing: normal;
-  text-align: left;
-  color: #999999;
-}
-
-.mini-text {
-  font-family: Roboto;
-  font-size: 15px;
-  font-weight: 300;
-  font-style: italic;
-  line-height: 1.6;
-  text-align: center;
-  color: #999999;
-}
-.about-text {
-  font-family: Roboto;
-  color: #999999;
-  max-width: 955px;
-  text-align: center;
-  margin: 53px auto;
-  font-size: 15px;
-}
-
-@media (max-width: 768px) {
-  .heading-sub {
-    font-size: 22px;
-  }
-  .heading-story {
-    font-size: 24px;
-  }
-  .heading-story::after {
-    bottom: -30px;
-  }
-  .mini-heading {
-    font-size: 12px;
-  }
-  .regular-text,
-  .about-text {
-    font-size: 13px;
-  }
-  .mini-text {
-    font-size: 12px;
-  }
-}
-
-@media (max-width: 358px) {
-  .heading-sub {
-    font-size: 16px;
-  }
-  .heading-story {
-    font-size: 18px;
-  }
-  .heading-story::after {
-    bottom: -25px;
-  }
-}
