--- a/mogo/css/about.css
+++ b/mogo/css/about.css
@@ -1,36 +1,21 @@
+.about .heading-story::after {
+  bottom: -35px;
+}
+
+/* cards container */
 .about-image-container {
-  margin: 5em auto;
+  margin: 98px auto;
+  margin-bottom: 110px;
   display: flex;
   justify-content: space-between;
 }
 
+/* card item */
 .about-card-item {
   cursor: pointer;
   width: 380px;
   height: 100%;
 }
-
-/* .inset {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  box-shadow: inset -5px -5px 0px 5px #95e1d3;
-} */
-/* .overlay {
-  position: absolute;
-  top: -10px;
-  left: -10px;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(
-    to bottom,
-    rgba(243, 129, 129, 0.9),
-    rgba(252, 227, 138, 0.9)
-  );
-  z-index: 1;
-} */
 
 /* counter */
 .about-counter {
@@ -39,15 +24,14 @@
   background-color: #95e1d3;
 }
 
+/* max width for content */
 .about-counter-inner {
-  /* background-color: blueviolet; */
   display: flex;
-  /* max-width: 62%; */
-  /* max-width: 1200px; */
   height: 100%;
   margin: 0 auto;
 }
 
+/* counter items */
 .about-counter-item {
   color: var(--primary-color, #fff);
   width: 20%;
@@ -57,33 +41,34 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* background-color: blue; */
 }
 .about-counter-item:first-child {
   border-right: 1px solid rgba(255, 255, 255, 0.3);
   border-left: 1px solid rgba(255, 255, 255, 0.3);
-  /* background-color: blue; */
 }
 
 .about-counter-item-number {
   font-size: 72px;
   font-weight: 900;
+  line-height: normal;
+  margin: 0;
+  margin-bottom: 8px;
+  padding: 0;
 }
 .about-counter-item-text {
   font-size: 14px;
   font-weight: normal;
+  margin: 0;
+  padding: 0;
 }
 
-/* .about-card-hover {
-  position: relative;
-} */
-
+/* card item settings */
 .about-img-wrapper {
   width: 100%;
-  /* overflow: hidden; */
   position: relative;
 }
 
+/* card item ratio */
 .about-img-wrapper::before {
   content: '';
   display: block;
@@ -99,6 +84,7 @@
   transform: translate(-50%, -50%);
 }
 
+/* hover effect settings */
 .about-team-effect {
   opacity: 0;
   display: flex;
@@ -112,6 +98,7 @@
   z-index: 8;
 }
 
+/* icon for hover effect */
 .users-svg {
   height: 24px;
   width: 32px;
@@ -132,7 +119,6 @@
   width: 100%;
   height: 100%;
   z-index: 5;
-  /* background-color: red; */
 }
 .hover-over:hover .about-team-effect {
   opacity: 1;
