--- a/mogo/css/examples.css
+++ b/mogo/css/examples.css
@@ -1,13 +1,15 @@
-.examles .heading-sub {
-  margin-bottom: 23px;
-}
+/* container */
 .examples-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  margin-top: 100px;
+  margin-top: 98px;
 }
 
+/* heading style */
+.examples .heading-story {
+  margin-bottom: 77px;
+}
 .example-img-container {
   cursor: pointer;
   width: 100%;
@@ -29,10 +31,13 @@ img.pic-item {
   position: relative;
 }
 
+/* hover overlay effect */
 .example-img-container:hover .example-img-wrapper::after {
   opacity: 1;
   transition: opacity 0.5s ease-in-out;
 }
+
+/* hover show content */
 .example-img-container:hover .example-over-content {
   opacity: 1;
   transition: opacity 0.5s ease-in-out;
@@ -42,6 +47,7 @@ img.pic-item {
   position: relative;
 }
 
+/* image overlay for hover effect */
 .example-img-wrapper::after {
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
@@ -59,23 +65,19 @@ img.pic-item {
   z-index: 1;
 }
 
+/* content container on hover */
 .example-over-content {
   opacity: 0;
-  /* transition: opacity 0.5s ease-in-out; */
   position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  /* top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   z-index: 3;
-  /* background-color: red; */
 }
 
 .example-over-content h6 {
