--- a/mogo/css/footer.css
+++ b/mogo/css/footer.css
@@ -6,19 +6,25 @@
   margin: 0 auto;
 }
 
+/* footer top has 3 parts: footer-left, footer-center and .footer-right  */
+/* container */
 .footer-top {
-  padding: 74px 0;
+  padding: 73px 0 58px 0;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: stretch;
 }
 
 /* footer left side */
+/* container */
 .footer-left {
+  flex-shrink: 0;
+  width: 480px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  margin-right: 30px;
 }
 .footer-logo {
   display: inline;
@@ -33,7 +39,6 @@
 }
 
 .regular-text.footer-left-text {
-  /* width: 464px; */
   font-family: Roboto;
   font-size: 15px;
   font-weight: normal;
@@ -44,8 +49,9 @@
   text-align: left;
   color: #999999;
   padding: 0;
-  margin-top: 42px;
-  margin-bottom: 49px;
+  margin-top: 36px;
+  margin-bottom: 35px;
+  padding-right: 20px;
 }
 
 .footer-left-follow-text {
@@ -56,15 +62,17 @@
   font-size: 18px;
   font-weight: bold;
 }
+.footer-left-delimiter {
+  width: 100%;
+  height: 1px;
+  background-color: #e5e5e5;
+  margin: 10px 0 16px 0;
+}
 
+/* social icons */
 .follow-us {
-  border-top: 1px solid #e5e5e5;
   display: flex;
-  /* flex-direction: column; */
-  /* align-items: flex-start; */
-  align-items: baseline;
-  margin-top: 18px;
-  padding-top: 16px;
+  align-items: center;
   margin-bottom: 0;
 }
 .follow-us p {
@@ -82,10 +90,12 @@
   margin-right: 15px;
 }
 
+/* form */
 .subscribe {
   display: flex;
-  margin-top: 37px;
+  margin-top: 35px;
 }
+/* form input */
 .subscribe input[type='text'] {
   padding: 14px;
   border: solid 1px #e7e7e7;
@@ -103,6 +113,7 @@
   height: 40px;
   width: 230px;
 }
+/* form button */
 .subscribe button {
   cursor: pointer;
   height: 40px;
@@ -123,36 +134,40 @@
 }
 
 /* footer center */
+/* container */
 .footer-center {
-  /* flex: 1; */
-  /* background-color: pink; */
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
+
 .mini-heading.footer-center-heading {
-  /* padding: 0; */
   display: block;
   margin: 0;
-  margin-bottom: 40px;
+  padding-top: 2px;
+  margin-bottom: 34px;
 }
 /* cards */
 .footer-card-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: flex-start;
   flex-grow: 1;
 }
+/* item */
 .footer-card {
   display: flex;
   align-items: center;
+  margin-bottom: 30px;
+}
+.footer-card:last-child {
+  margin-bottom: 0;
 }
 
 .footer-card-img {
   width: 120px;
   height: 80px;
-  /* background-color: tomato; */
 }
 .footer-card-img.img-item1 {
   background: url('../assets/footer-center-1.jpg');
@@ -193,9 +208,7 @@
 }
 /* footer right side */
 .footer-right {
-  /* flex: 1; */
-  /* flex-grow: 1; */
-  /* background-color: cyan; */
+  margin-left: auto;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -206,7 +219,7 @@
   grid-template-columns: repeat(3, 88px);
   grid-template-rows: repeat(3, 88px);
   gap: 2px;
-  margin-bottom: 20px;
+  margin-bottom: 14px;
 }
 /* footer bottom */
 .footer-bottom {
@@ -215,7 +228,7 @@
 
 .footer-rights {
   text-align: center;
-  padding: 24px 0;
+  padding: 19px 0 16px 0;
 }
 
 .site-author {
