--- a/mogo/css/happy.css
+++ b/mogo/css/happy.css
@@ -6,6 +6,7 @@
   position: relative;
 }
 
+/* background overlay */
 .happy::before {
   position: absolute;
   content: '';
@@ -16,9 +17,8 @@
   background: rgba(255, 255, 255, 0.85);
   z-index: 1;
 }
-.happy .heading-sub {
-  margin-bottom: 16px;
-}
+
+/* max width and content over (opacity) */
 .happy-inner {
   margin: 0 auto;
   position: absolute;
@@ -29,16 +29,17 @@
   z-index: 2;
 }
 
+/* container */
 .happy-users-container {
   width: 100%;
-  margin-top: 100px;
+  margin-top: 124px;
   display: grid;
   grid-template-rows: repeat(2, 2fr);
   grid-template-columns: repeat(2, 2fr);
 }
 
+/* item */
 .happy-card {
-  /* border: 2px solid darkblue; */
   height: 230px;
   display: flex;
   align-items: flex-start;
@@ -60,9 +61,9 @@
 }
 .user-info-container .mini-text {
   padding: 0;
-  margin-bottom: 15px;
+  margin-bottom: 13px;
 }
 .user-info-container .delimiter {
   padding: 0;
-  margin-bottom: 20px;
+  margin-bottom: 18px;
 }
