--- a/mogo/css/media/blog-media.css
+++ b/mogo/css/media/blog-media.css
@@ -1,4 +1,5 @@
 @media (max-width: 1250px) {
+  /* container direction */
   .blog-card-container {
     flex-direction: column;
     align-items: center;
