--- a/mogo/css/media/team-media.css
+++ b/mogo/css/media/team-media.css
@@ -1,4 +1,5 @@
 @media (max-width: 1260px) {
+  /* container direction */
   .team-card-container {
     display: flex;
     flex-direction: column;
