--- a/mogo/css/work.css
+++ b/mogo/css/work.css
@@ -1,65 +1,59 @@
+.work {
+  width: 100%;
+  height: 650px;
+}
+
+/* different margin bottom for section heading */
+.work .heading-story {
+  margin-bottom: 68px;
+}
+
+/* cards container */
 .work-wrapper {
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  /* background-color: burlywood; */
   justify-items: center;
 }
-.work {
-  width: 100%;
-  height: 650px;
-  margin-bottom: 72px;
-}
-/* .work-part1 {
-  border-bottom: 1px solid #e5e5e5;
-}
-.work-part1,
-.work-part2 {
-  display: flex;
-} */
+
+/* item wrapper shows border bottom if needed */
 .item-wrapper {
   width: 100%;
   height: 100%;
   display: flex;
-  /* flex-direction: column; */
   align-items: center;
   justify-content: center;
-  /* border: darkblue 2px solid; */
-  padding-bottom: 50px;
-  padding-top: 50px;
+  padding-bottom: 31px;
+  padding-top: 40px;
 }
 
+/* border bottom after first row */
 .item-wrapper:nth-child(1),
 .item-wrapper:nth-child(2),
 .item-wrapper:nth-child(3) {
   border-bottom: 1px solid #e5e5e5;
-  padding-top: 20px;
+  padding-top: 10px;
 }
 
+/* single item */
 .work-item {
-  /* border: 1px solid blueviolet; */
   max-width: 370px;
   display: flex;
   align-items: flex-start;
-  /* margin-left: 30px;
-  margin-bottom: 50px;
-  margin-top: 20px; */
+  padding-top: 3px;
+  padding-bottom: 3px;
 }
 
 .work-item-icon {
+  margin-top: 6px;
   width: 32px;
   height: 32px;
-  /* border: 1px solid blue; */
 }
-/* .work-item-icon .item1 {
-  background-image: url('../assets/alarm.svg');
-} */
 
 .work-item-content {
-  padding-left: 30px;
+  padding-left: 29px;
   width: 368px;
-  /* border: 1px solid blue; */
 }
 .work-item-content h6 {
   text-transform: uppercase;
@@ -67,7 +61,7 @@
   font-weight: normal;
   text-align: left;
   padding: 0 0 20px 0;
-  padding-bottom: 20px;
+  padding-bottom: 13px;
   font-size: 14px;
   color: #333;
 }
