--- a/eng/style.css
+++ b/eng/style.css
@@ -7,7 +7,7 @@
 .heading {
   margin-top: 1.8em;
   text-align: center;
-  color: blue;
+  color: #010158;
   visibility: visible;
 }
 
@@ -18,10 +18,34 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 1px solid blue;
+  border: 1px solid #010158;
   border-radius: 3px;
   padding: 1.6em;
   background-color: #dcdcff;
+}
+
+.input-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin: 1em;
+}
+
+.input-wrapper input {
+  width: 100%;
+  padding: 0.5em 0.8em;
+  color: #010158;
+  border: 1px solid #010158;
+  border-radius: 3px;
+  font-size: 1.1em;
+}
+
+.input-wrapper label {
+  display: block;
+  margin-bottom: 0.4em;
+  color: #010158;
 }
 
 .forms-wrapper .buttons {
@@ -32,29 +56,19 @@
   align-items: center;
 }
 
-.forms-wrapper input {
-  width: 100%;
-  padding: 0.5em 1em;
-  margin: 1em;
-  color: blue;
-  border: 1px solid blue;
-  border-radius: 3px;
-  font-size: 1.1em;
-}
-
 button {
   cursor: pointer;
   padding: 0.8em 1em;
   background-color: white;
   outline: none;
-  border: 1px solid blue;
-  color: blue;
+  border: 1px solid #010158;
+  color: #010158;
   border-radius: 3px;
   font-weight: bold;
 }
 
 button:hover {
-  background-color: blue;
+  background-color: #010158;
   color: white;
 }
 
